--- a/WorkSpace/.config/hypr/keybindings.conf
+++ b/WorkSpace/.config/hypr/keybindings.conf
@@ -21,7 +21,7 @@ $mainMod = Super # super / meta / windows key
 
 # Assign apps
 $TERMINAL = kitty
-$EDITOR = cursor
+$EDITOR = vscodium
 $EXPLORER = dolphin
 $BROWSER = firefox
 
@@ -30,17 +30,15 @@ $d=[$wm]
 bindd = $mainMod, Q, $d close focused window, exec, $scrPath/dontkillsteam.sh
 bindd = $mainMod Shift, Q, $d kill active, exec, $scrPath/killactive.sh
 bindd = $mainMod, Delete, $d kill hyprland session, exit
-bindd = $mainMod, Space, $d toggle float, togglefloating
-bind = $mainMod, F, fullscreen, 1
+bindd = $mainMod, Space, $d Toggle floating,  exec, hyprctl --batch "dispatch togglefloating; dispatch resizeactive exact 95% 95%; dispatch centerwindow"
+bind  = $mainMod, F, fullscreen, 1
 bindd = $mainMod Shift, F, $d toggle fullscreen, fullscreen
-bindd = $mainMod, G, $d toggle group, togglegroup
 bindd = $mainMod, L, $d lock screen, exec, lockscreen.sh
-bindd = $mainMod, Escape, $d logout menu, exec, $scrPath/logoutlaunch.sh
-bindd = $mainMod, R, $d toggle waybar and reload config, exec, killall waybar || (env reload_flag=1 $scrPath/wbarconfgen.sh)
+bindd = $mainMod, Escape, $d logout menu, exec, $scrPath/logoutlaunch.sh 2
+bindd = $mainMod, R, $d toggle waybar and reload config, exec, hyde-shell waybar --hide
 ##      bindd = $mainMod, R, $d toggle waybar, exec, killall waybar || waybar # toggle waybar without reloading, this is faster
 ##      bindd = $mainMod Shift, F, $d toggle pin on focused window, exec, $scrPath/windowpin.sh
-
-
+##      bindd = $mainMod, G, $d toggle group, togglegroup
 
 $d=[$wm|Change focus]
 bindd = $mainMod, Left, $d focus left, movefocus, l
@@ -78,7 +76,7 @@ bindd = $mainMod, J, $d toggle split, togglesplit
 $l=Launcher
 $d=[$l|Apps]
 bindd = $mainMod, Return, $d terminal emulator , exec, $TERMINAL
-bindd = $mainMod Alt, T, $d dropdown terminal , exec, [float; move 20% 5%; size 60% 60%] $TERMINAL
+bindd = $mainMod Shift, Return, $d dropdown terminal , exec, [float; move 10% 5%; size 80% 55%] $TERMINAL
 bindd = $mainMod, T, $d file explorer , exec, $EXPLORER
 bindd = $mainMod, E, $d text editor , exec, $EDITOR
 bindd = $mainMod, B, $d web browser , exec, $BROWSER
@@ -93,9 +91,9 @@ bindd = $mainMod, TAB, $d window switcher , exec, pkill -x rofi || $rofi-launch 
 bindd = $mainMod Shift, TAB, $d file finder , exec, pkill -x rofi || $rofi-launch f
 bindd = $mainMod Shift, E, $d emoji  picker , exec, pkill -x rofi || $scrPath/emoji-picker.sh # launch emoji picker
 bindd = $mainMod Alt, E, $d glyph picker , exec, pkill -x rofi || $scrPath/glyph-picker.sh # launch glyph picker
+bindd = $mainMod, slash, $d keybindings hint, exec, pkill -x rofi || $scrPath/keybinds_hint.sh c # launch keybinds hint
 bindd = $mainMod, V, $d clipboard ,  exec, pkill -x rofi || $scrPath/cliphist.sh -c # launch clipboard,
 bindd = $mainMod Shift, V, $d clipboard manager , exec, pkill -x rofi || $scrPath/cliphist.sh # launch clipboard Manager
-##      bindd = $mainMod, slash, $d keybindings hint, exec, pkill -x rofi || $scrPath/keybinds_hint.sh c # launch keybinds hint
 
 $hc=Hardware Controls
 $d=[$hc|Audio]
@@ -128,6 +126,7 @@ bind = , xf86Launch4, exec, asusctl profile -n # FN+F5 Fan Profiles
 
 $ut=Utilities
 $d=[$ut]
+bindd = $mainMod, G, $d open game launcher , exec, $scrPath/gamelauncher.sh # run game launcher for steam and lutris
 bindd = $mainMod Shift, G, $d game mode , exec, $scrPath/gamemode.sh # disable hypr effects for gamemode
 ##       binddl = $mainMod, K, $d toggle keyboard layout , exec, $scrPath/keyboardswitch.sh # switch keyboard layout
 
@@ -147,7 +146,7 @@ bindd = $mainMod Shift, K, $d previous waybar layout , exec, $scrPath/wbarconfge
 bindd = $mainMod Shift, Backspace, $d wallbash mode selector , exec, pkill -x rofi || $scrPath/wallbashtoggle.sh -m # launch wallbash mode select menu
 bindd = $mainMod, Backspace, $d select a theme, exec, pkill -x rofi || $scrPath/themeselect.sh # launch theme select menu
 bindd = $mainMod, D, $d select animation, exec, pkill -x rofi || $scrPath/animations.sh --select # launch animation select menu
-
+bindd = $mainMod Shift, L, $d select hyprlock layout, exec, pkill -x rofi || $scrPath/hyprlock.sh --select # launch hyprlock layout select menu
 ##      bindd = $mainMod Alt, Right, $d next global wallpaper , exec, $scrPath/wallpaper.sh -Gn # next global wallpaper
 ##      bindd = $mainMod Alt, Left, $d previous global wallpaper , exec, $scrPath/wallpaper.sh -Gp # previous global wallpaper
 
