--- a/WorkSpace/.config/fastfetch/config.jsonc
+++ b/WorkSpace/.config/fastfetch/config.jsonc
@@ -1,7 +1,7 @@
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "logo": {
-        "source": "\"$(fastfetch.sh logo)\"",
+        "source": "\"$(fastfetch.sh logo --local)\"",
         "type": "kitty",
         "height": 13,
         "width": 26,
@@ -21,7 +21,7 @@
         "break",
         {
             "type": "kernel",
-            "key": " Void-Strike",
+            "key": "   .voidrc  ",
             "keyColor": "magenta"
         },
         {
